--- a/beta.html
+++ b/beta.html
@@ -215,6 +215,24 @@
                         <li>Button opacity changes to 15% blue via slide-in animation</li>
                         <li>Button outline and text changes back to default blue</li>
                     </ul>
+                        <p>"X" Button</p>
+                    <ul>
+                        <li>Hover ON</li> 
+                            <ul>
+                                <li>Curser changes to finger</li>
+                                <li>"X" rotates 180 degrees</li>
+                            </ul>
+                        <li>Mouse Down</li> 
+                            <ul>
+                                <li>Button opacity changes to white</li>
+                            </ul>
+                        <li>Mouse Up</li> 
+                            <ul>
+                                <li>Button opacity changes back to default transparency</li>
+                                <li>Button slides to the left then bounces to the right</li>
+                                <li>Container disappears while the new container slides in</li>
+                            </ul>
+                    </ul>
             </ul>
         </div>
 
