--- a/beta.html
+++ b/beta.html
@@ -140,12 +140,17 @@
 
             <p>"X" Button</p>
             <ul>
-                <li>Hover ON
+                <li>Hover ON</li>
                     <ul>
                         <li>Cursor changes to finger</li>
                         <li>"X" rotates 180 degrees</li>
                     </ul>
                 </li>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>"X" stops rotating</li>
+                    </ul>
                 <li>Mouse Down
                     <ul>
                         <li>Button opacity changes to white</li>
@@ -247,6 +252,11 @@
                         <li>"X" rotates 180 degrees</li>
                     </ul>
                 </li>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>"X" stops rotating</li>
+                    </ul>
                 <li>Mouse Down
                     <ul>
                         <li>Button opacity changes to white</li>
