--- a/alpha.html
+++ b/alpha.html
@@ -17,12 +17,12 @@
         </div>
     </div>
 
-<!-- link -->
+<!-- LINK -->
 <h4>
     <a href="https://youtube.com/" target="_blank" class="youtube-link">https://youtube.com/</a>
 </h4>
 
-<!-- triggers -->
+<!-- TRIGGERS -->
     <div class="container">
         <div class="box">
             <h3>TRIGGERS</h3>
@@ -43,7 +43,7 @@
             </ul>
         </div>
 
-    <!-- rules -->
+<!-- RULES -->
     <div class="box">
         <h3>RULES</h3>
         <p>Like - Default</p>
@@ -105,7 +105,7 @@
         </ul>
     </div>
 
-    <!-- feedback -->
+<!-- FEEDBACK -->
     <div class="box">
         <h3>FEEDBACK</h3>
         <p>Like - Default</p>
@@ -165,14 +165,14 @@
         </ul>
     </div>
 
-    <!-- loops and modes -->
+<!-- LOOPS AND MODES -->
     <div class="box">
         <h3>LOOPS &amp; MODES</h3>
         <p>NONE</p>
     </div>
 </div>
 
-<!-- gif -->
+<!-- GIF -->
 <div class="gif-container">
     <img src="graphics/alpha-microinteractions-youtube.gif" alt="thumbs up icon" class="alpha-gif">
 </div>
