--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1><a href="alpha.html">alpha</a></h1>
     <h1><a href="alpha-build.html">alpha build</a></h1>
     <h1><a href="beta.html">beta</a></h1>
+    <h1><a href="beta-build.html">beta build</a></h1>
 </body>
 </html>
