--- a/beta-build.html
+++ b/beta-build.html
@@ -21,7 +21,7 @@
 
 <!-- BUILD -->
     <div class="card-container">
-                    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
+       <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
 
         <div class="card-header">
             <button class="close-button" type="button">×</button>
@@ -39,8 +39,7 @@
                 <p>John Doe and 5 other mutual connections</p>
             </div>
 
-            <button class="connect-button" type="button">+ Connect</button>
-
+            <button class="connect-button" type="button"><span>Connect +</span></button>
         </div>
     </div>
 
