--- a/beta-build.html
+++ b/beta-build.html
@@ -20,28 +20,52 @@
     </div>
 
 <!-- BUILD -->
-    <div class="card-container">
-       <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
+<div class="card-container">
+    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
 
-        <div class="card-header">
-            <button class="close-button" type="button">×</button>
+    <div class="card-header">
+        <button class="close-button" type="button">×</button>
 
-            <div class="profile-picture">
-                <img src="graphics/profile-picture-placeholder.jpg" alt="Profile Picture">
-            </div> 
-        </div>
-
-        <div class="card-content">
-            <p class="name">Jane Doe</p>
-            <p class="bio">Digital Marketing Strategist</p>
-            <div class="mutual-connections">
-                <img src="graphics/mutual-connections-placeholder.webp" alt="Mutual Connection" class="mutual-connections">
-                <p>John Doe and 5 other mutual connections</p>
-            </div>
-
-            <button class="connect-button" type="button"><span>Connect +</span></button>
-        </div>
+        <div class="profile-picture">
+            <img src="graphics/profile-picture-placeholder.jpg" alt="Profile Picture">
+        </div> 
     </div>
+
+    <div class="card-content">
+        <p class="name">Jane Doe</p>
+        <p class="bio">Digital Marketing Strategist</p>
+        <div class="mutual-connections">
+            <img src="graphics/mutual-connections-placeholder.webp" alt="Mutual Connection" class="mutual-connections">
+            <p>John Doe and 5 other mutual connections</p>
+        </div>
+        
+        <button id="connectButton" class="connect-button" type="button"><span>Connect +</span></button>
+    </div>
+</div>
+
+<!-- BUILD 2 -->
+<div class="card-container" style="display: none;"> 
+    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background2">
+
+<div class="card-header joshua-doe">
+        <button class="close-button" type="button">×</button>
+
+        <div class="profile-picture">
+            <img src="graphics/profile-picture-placeholder2.jpg" alt="Profile Picture">
+        </div> 
+    </div>
+
+    <div class="card-content">
+        <p class="name">Joshua Doe</p>
+        <p class="bio">Private Investigator</p>
+        <div class="mutual-connections">
+            <img src="graphics/mutual-connections-placeholder.webp" alt="Mutual Connection" class="mutual-connections">
+            <p>John Doe and 5 other mutual connections</p>
+        </div>
+        
+        <button id="connectButton" class="connect-button" type="button"><span>Connect +</span></button>
+    </div>
+</div>
 
 <!-- LINK -->
     <h4>
