--- a/beta-build.html
+++ b/beta-build.html
@@ -43,28 +43,28 @@
 </div>
 
 <!-- BUILD 2 -->
-<div class="card-container" style="display: none;"> 
-    <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
-
-    <div class="card-header">
-        <button class="close-button" type="button">×</button>
-
-        <div class="profile-picture">
-            <img src="graphics/profile-picture-placeholder2.jpg" alt="Profile Picture">
-        </div> 
-    </div>
-
-    <div class="card-content">
-        <p class="name">Joshua Doe</p>
-        <p class="bio">Private Investigator</p>
-        <div class="mutual-connections">
-            <img src="graphics/mutual-connections-placeholder.webp" alt="Mutual Connection" class="mutual-connections">
-            <p>John Doe and 5 other mutual connections</p>
-        </div>
+    <div class="card-container" style="display: none;">
+        <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
         
-        <button id="connectButton" class="connect-button" type="button"><span>Connect +</span></button>
+        <div class="card-header joshua-doe"> <!-- Added class joshua-doe here -->
+            <button class="close-button" type="button">×</button>
+
+            <div class="profile-picture">
+                <img src="graphics/profile-picture-placeholder2.jpg" alt="Profile Picture">
+            </div> 
+        </div>
+
+        <div class="card-content">
+            <p class="name">Joshua Doe</p>
+            <p class="bio">Private Investigator</p>
+            <div class="mutual-connections">
+                <img src="graphics/mutual-connections-placeholder.webp" alt="Mutual Connection" class="mutual-connections">
+                <p>John Doe and 5 other mutual connections</p>
+            </div>
+            
+            <button id="connectButton" class="connect-button" type="button"><span>Connect +</span></button>
+        </div>
     </div>
-</div>
 
 <!-- LINK -->
     <h4>
@@ -139,9 +139,7 @@
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Button opacity darkens 50% blue</li>
-                        <li>Button outline changes to white</li>
-                        <li>Button text lightens 15% blue</li>
+                        <li>Button changes to 100% light blue</li>
                     </ul>
                 </li>
                 <li>Mouse Up
@@ -170,9 +168,7 @@
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Button opacity darkens 50% blue</li>
-                        <li>Button outline changes to white</li>
-                        <li>Button text lightens 15% blue</li>
+                        <li>Button changes to 100% light blue</li>
                     </ul>
                 </li>
                 <li>Mouse Up
@@ -247,9 +243,7 @@
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Button opacity darkens 50% blue</li>
-                        <li>Button outline changes to white</li>
-                        <li>Button text lightens 15% blue</li>
+                        <li>Button changes to 100% light blue</li>
                     </ul>
                 </li>
                 <li>Mouse Up
@@ -277,9 +271,7 @@
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Button opacity darkens 50% blue</li>
-                        <li>Button outline changes to white</li>
-                        <li>Button text lightens 15% blue</li>
+                        <li>Button changes to 100% light blue</li>
                     </ul>
                 </li>
                 <li>Mouse Up
