--- a/beta-build.html
+++ b/beta-build.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-<!-- BUILD -->
+<!-- CONTAINER 1 -->
 <div class="card-container">
     <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
 
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<!-- BUILD 2 -->
+<!-- CONTAINER 2 -->
     <div class="card-container" style="display: none;">
         <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
         
@@ -183,17 +183,18 @@
 
             <p>"X" Button</p>
             <ul>
-                <li>Hover ON</li>
+                <li>Hover ON
                     <ul>
                         <li>Cursor changes to finger</li>
                         <li>"X" rotates 180 degrees</li>
                     </ul>
                 </li>
-                <li>Hover OFF</li>
+                <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>"X" stops rotating</li>
                     </ul>
+                </li>
                 <li>Mouse Down
                     <ul>
                         <li>Button opacity changes to white</li>
@@ -291,11 +292,12 @@
                         <li>"X" rotates 180 degrees</li>
                     </ul>
                 </li>
-                <li>Hover OFF</li>
+                <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>"X" stops rotating</li>
                     </ul>
+                </li>
                 <li>Mouse Down
                     <ul>
                         <li>Button opacity changes to white</li>
