--- a/beta-build.html
+++ b/beta-build.html
@@ -321,7 +321,7 @@
     </div>
 
 <!-- SCRIPT -->
-    <script src="alpha.js"></script>
+    <script src="final.js"></script>
     
 </body>
 </html>
