--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1><a href="alpha-build.html">alpha build</a></h1>
     <h1><a href="beta.html">beta</a></h1>
     <h1><a href="beta-build.html">beta build</a></h1>
+    <h1><a href="final.html">final</a></h1>
 </body>
 </html>
