--- a/final.html
+++ b/final.html
@@ -57,6 +57,14 @@
                 <li>Mouse Down</li> 
                 <li>Mouse Up</li> 
             </ul>
+
+            <p>View Profile</p>
+            <ul>
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse Down</li>
+                <li>Mouse Up</li>
+            </ul>
         </div>
 
 <!-- RULES -->
@@ -161,6 +169,35 @@
                     </ul>
                 </li>
             </ul>
+
+            <p>View Profile</p>
+            <ul>
+                <li>Hover ON
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Drop shadow appears at bottom of profile picture</li>
+                        <li>"View Profile" appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Hover OFF
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>Drop shadow disappears from bottom of profile picture</li>
+                        <li>"View Profile" disappears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Down
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Inner shadow appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Up
+                    <ul>
+                        <li>User is taken to a new tab</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
 
 <!-- FEEDBACK -->
@@ -261,6 +298,35 @@
                         <li>Button opacity changes back to default transparency</li>
                         <li>Button slides to the left then bounces to the right</li>
                         <li>Container disappears while the new container slides in</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <p>View Profile</p>
+            <ul>
+                <li>Hover ON
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Drop shadow appears at bottom of profile picture</li>
+                        <li>"View Profile" appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Hover OFF
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>Drop shadow disappears from bottom of profile picture</li>
+                        <li>"View Profile" disappears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Down
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Inner shadow appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Up
+                    <ul>
+                        <li>User is taken to a new tab</li>
                     </ul>
                 </li>
             </ul>
