--- a/final.html
+++ b/final.html
@@ -337,7 +337,15 @@
             <h3>LOOPS &amp; MODES</h3>
             <p>NONE</p>
         </div>
-    </div>    
+    </div>
+
+<!-- GIFS -->
+    <div class="gif-container">
+        <div class="beta-gif"><img src="graphics/container.gif" alt="gif 1 of redesigned LinkedIn container"></div>
+        <div class="beta-gif"><img src="graphics/connect.gif" alt="gif 2 of redesigned LinkedIn connect button"></div>
+        <div class="beta-gif"><img src="graphics/x.gif" alt="gif 3 of redesigned LinkedIn close button"></div>
+        <div class="beta-gif"><img src="graphics/profile.gif" alt="gif 4 of redesigned LinkedIn profile button"></div>
+    </div>
 
 <!-- SCRIPT -->
     <script src="final.js"></script>
