--- a/beta-build.html
+++ b/beta-build.html
@@ -144,9 +144,7 @@
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue via slide-out animation</li>
-                        <li>Button outline and text changes back to default blue</li>
+                        <li>Button text changes to "Pending..."</li>
                         <li>Database record flag set to TRUE</li>
                     </ul>
                 </li>
@@ -173,9 +171,7 @@
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue via slide-in animation</li>
-                        <li>Button outline and text changes back to default blue</li>
+                        <li>Button text changes back to "Connect +"</li>    
                         <li>Database record flag set to FALSE</li>
                     </ul>
                 </li>
@@ -186,13 +182,13 @@
                 <li>Hover ON
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>"X" rotates 180 degrees</li>
+                        <li>"X" rotates forward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
-                        <li>"X" stops rotating</li>
+                        <li>"X" rotates backward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Mouse Down
@@ -203,7 +199,7 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the left then bounces to the right</li>
+                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container disappears while the new container slides in</li>
                     </ul>
                 </li>
@@ -250,8 +246,6 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue via slide-out animation</li>
-                        <li>Button outline and text changes back to default blue</li>
                     </ul>
                 </li>
             </ul>
@@ -277,9 +271,7 @@
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue via slide-in animation</li>
-                        <li>Button outline and text changes back to default blue</li>
+                        <li>Button text changes back to "Connect +"</li>    
                     </ul>
                 </li>
             </ul>
@@ -289,13 +281,13 @@
                 <li>Hover ON
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>"X" rotates 180 degrees</li>
+                        <li>"X" rotates forward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
-                        <li>"X" stops rotating</li>
+                        <li>"X" rotates backward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Mouse Down
@@ -306,7 +298,7 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the left then bounces to the right</li>
+                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container disappears while the new container slides in</li>
                     </ul>
                 </li>
