--- a/final.html
+++ b/final.html
@@ -106,8 +106,6 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue via slide-out animation</li>
-                        <li>Button outline and text changes back to default blue</li>
                         <li>Database record flag set to TRUE</li>
                     </ul>
                 </li>
@@ -134,9 +132,7 @@
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue via slide-in animation</li>
-                        <li>Button outline and text changes back to default blue</li>
+                        <li>Button text changes back to "Connect +"</li>    
                         <li>Database record flag set to FALSE</li>
                     </ul>
                 </li>
@@ -147,13 +143,13 @@
                 <li>Hover ON
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>"X" rotates 180 degrees</li>
+                        <li>"X" rotates forward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
-                        <li>"X" stops rotating</li>
+                        <li>"X" rotates backward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Mouse Down
@@ -164,7 +160,7 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the left then bounces to the right</li>
+                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container disappears while the new container slides in</li>
                     </ul>
                 </li>
@@ -183,18 +179,17 @@
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Drop shadow disappears from bottom of profile picture</li>
-                        <li>"View Profile" disappears at top of profile picture</li>
+                        <li>"View Profile" disappears from top of profile picture</li>
                     </ul>
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Cursor changes to finger</li>
                         <li>Inner shadow appears at top of profile picture</li>
                     </ul>
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>User is taken to a new tab</li>
+                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
                     </ul>
                 </li>
             </ul>
@@ -240,8 +235,6 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button text changes to "Pending..."</li>    
-                        <li>Button opacity changes to 15% blue via slide-out animation</li>
-                        <li>Button outline and text changes back to default blue</li>
                     </ul>
                 </li>
             </ul>
@@ -267,9 +260,7 @@
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>Button text changes back to "+ Connect"</li>    
-                        <li>Button opacity changes to 15% blue via slide-in animation</li>
-                        <li>Button outline and text changes back to default blue</li>
+                        <li>Button text changes back to "Connect +"</li>    
                     </ul>
                 </li>
             </ul>
@@ -279,13 +270,13 @@
                 <li>Hover ON
                     <ul>
                         <li>Cursor changes to finger</li>
-                        <li>"X" rotates 180 degrees</li>
+                        <li>"X" rotates forward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Hover OFF
                     <ul>
                         <li>Cursor changes back to pointer</li>
-                        <li>"X" stops rotating</li>
+                        <li>"X" rotates backward 180 degrees</li>
                     </ul>
                 </li>
                 <li>Mouse Down
@@ -296,7 +287,7 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the left then bounces to the right</li>
+                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container disappears while the new container slides in</li>
                     </ul>
                 </li>
@@ -315,18 +306,17 @@
                     <ul>
                         <li>Cursor changes back to pointer</li>
                         <li>Drop shadow disappears from bottom of profile picture</li>
-                        <li>"View Profile" disappears at top of profile picture</li>
+                        <li>"View Profile" disappears from top of profile picture</li>
                     </ul>
                 </li>
                 <li>Mouse Down
                     <ul>
-                        <li>Cursor changes to finger</li>
                         <li>Inner shadow appears at top of profile picture</li>
                     </ul>
                 </li>
                 <li>Mouse Up
                     <ul>
-                        <li>User is taken to a new tab</li>
+                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
                     </ul>
                 </li>
             </ul>
