--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1><a href="beta.html">beta</a></h1>
     <h1><a href="beta-build.html">beta build</a></h1>
     <h1><a href="final.html">final</a></h1>
+    <h1><a href="final-build.html">final build</a></h1>
 </body>
 </html>
