--- a/final.html
+++ b/final.html
@@ -161,7 +161,7 @@
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
                         <li>Button slides to the right then bounces to the left</li>
-                        <li>Container disappears while the new container slides in</li>
+                        <li>Container fades out while the new container slides in</li>
                     </ul>
                 </li>
             </ul>
@@ -288,7 +288,7 @@
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
                         <li>Button slides to the right then bounces to the left</li>
-                        <li>Container disappears while the new container slides in</li>
+                        <li>Container fades out while the new container slides in</li>
                     </ul>
                 </li>
             </ul>
