--- a/final.html
+++ b/final.html
@@ -51,6 +51,14 @@
                 <li>Mouse Up</li> 
             </ul>
 
+            <p>Profile Picture</p>
+            <ul>
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse Down</li>
+                <li>Mouse Up</li>
+            </ul>
+
             <p>"X" Button</p>
             <ul>
                 <li>Hover ON</li> 
@@ -58,13 +66,6 @@
                 <li>Mouse Up</li> 
             </ul>
 
-            <p>View Profile</p>
-            <ul>
-                <li>Hover ON</li>
-                <li>Hover OFF</li>
-                <li>Mouse Down</li>
-                <li>Mouse Up</li>
-            </ul>
         </div>
 
 <!-- RULES -->
@@ -138,6 +139,34 @@
                 </li>
             </ul>
 
+            <p>Profile Picture</p>
+            <ul>
+                <li>Hover ON
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Drop shadow appears at bottom of profile picture</li>
+                        <li>"View Profile" appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Hover OFF
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>Drop shadow disappears from bottom of profile picture</li>
+                        <li>"View Profile" disappears from top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Down
+                    <ul>
+                        <li>Inner shadow appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Up
+                    <ul>
+                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
+                    </ul>
+                </li>
+            </ul>
+
             <p>"X" Button</p>
             <ul>
                 <li>Hover ON
@@ -166,33 +195,6 @@
                 </li>
             </ul>
 
-            <p>View Profile</p>
-            <ul>
-                <li>Hover ON
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Drop shadow appears at bottom of profile picture</li>
-                        <li>"View Profile" appears at top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Hover OFF
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Drop shadow disappears from bottom of profile picture</li>
-                        <li>"View Profile" disappears from top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Mouse Down
-                    <ul>
-                        <li>Inner shadow appears at top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Mouse Up
-                    <ul>
-                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
-                    </ul>
-                </li>
-            </ul>
         </div>
 
 <!-- FEEDBACK -->
@@ -265,6 +267,35 @@
                 </li>
             </ul>
 
+
+            <p>Profile Picture</p>
+            <ul>
+                <li>Hover ON
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                        <li>Drop shadow appears at bottom of profile picture</li>
+                        <li>"View Profile" appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Hover OFF
+                    <ul>
+                        <li>Cursor changes back to pointer</li>
+                        <li>Drop shadow disappears from bottom of profile picture</li>
+                        <li>"View Profile" disappears from top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Down
+                    <ul>
+                        <li>Inner shadow appears at top of profile picture</li>
+                    </ul>
+                </li>
+                <li>Mouse Up
+                    <ul>
+                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
+                    </ul>
+                </li>
+            </ul>
+
             <p>"X" Button</p>
             <ul>
                 <li>Hover ON
@@ -293,39 +324,19 @@
                 </li>
             </ul>
 
-            <p>View Profile</p>
-            <ul>
-                <li>Hover ON
-                    <ul>
-                        <li>Cursor changes to finger</li>
-                        <li>Drop shadow appears at bottom of profile picture</li>
-                        <li>"View Profile" appears at top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Hover OFF
-                    <ul>
-                        <li>Cursor changes back to pointer</li>
-                        <li>Drop shadow disappears from bottom of profile picture</li>
-                        <li>"View Profile" disappears from top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Mouse Down
-                    <ul>
-                        <li>Inner shadow appears at top of profile picture</li>
-                    </ul>
-                </li>
-                <li>Mouse Up
-                    <ul>
-                        <li>Page blurs as loading animation plays before user is taken to a new tab</li>
-                    </ul>
-                </li>
-            </ul>
         </div>
 
 <!-- LOOPS AND MODES -->
         <div class="box">
             <h3>LOOPS &amp; MODES</h3>
-            <p>NONE</p>
+            <p>Profile Picture</p>
+            <ul>
+                <li>Mouse Up
+                    <ul>
+                        <li>User is taken to a new tab</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 
