--- a/final-build.html
+++ b/final-build.html
@@ -19,6 +19,13 @@
         </div>
     </div>
 
+<!-- LOADING -->
+    <div id="backgroundOverlay" class="background-overlay"></div>
+    <div id="loadingBarOverlay" class="loading-bar-overlay">
+        <div class="loading-bar"></div>
+    </div>
+    
+
 <!-- CONTAINER 1 -->
         <div class="card-container">
             <img src="graphics/header-background-placeholder.webp" alt="Header Background" class="card-header-background">
@@ -27,8 +34,18 @@
                 <button class="close-button" type="button">×</button>
 
                 <div class="profile-picture">
+                    <svg class="text-curve" viewBox="0 0 100 100">
+                        <defs>
+                            <path id="curve" d="M 10,85 A 40,40 0 1,1 90,85" />
+                        </defs>
+                        <text>
+                            <textPath href="#curve" startOffset="50%" text-anchor="middle">
+                                View Profile
+                            </textPath>
+                        </text>
+                    </svg>
                     <img src="graphics/profile-picture-placeholder.jpg" alt="Profile Picture">
-                </div> 
+                </div>
             </div>
 
             <div class="card-content">
@@ -51,8 +68,18 @@
                 <button class="close-button" type="button">×</button>
 
                 <div class="profile-picture">
-                    <img src="graphics/profile-picture-placeholder2.jpg" alt="Profile Picture">
-                </div> 
+                    <svg class="text-curve" viewBox="0 0 100 100">
+                        <defs>
+                            <path id="curve" d="M 10,85 A 40,40 0 1,1 90,85" />
+                        </defs>
+                        <text>
+                            <textPath href="#curve" startOffset="50%" text-anchor="middle">
+                                View Profile
+                            </textPath>
+                        </text>
+                    </svg>
+                    <img src="graphics/profile-picture-placeholder2.jpg" a href="www.linkedin.com/" target="_blank" alt="Profile Picture">
+                </div>
             </div>
 
             <div class="card-content">
@@ -232,7 +259,6 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container fades out while the new container slides in</li>
                     </ul>
                 </li>
@@ -361,7 +387,6 @@
                 <li>Mouse Up
                     <ul>
                         <li>Button opacity changes back to default transparency</li>
-                        <li>Button slides to the right then bounces to the left</li>
                         <li>Container fades out while the new container slides in</li>
                     </ul>
                 </li>
