--- a/final-build.html
+++ b/final-build.html
@@ -78,7 +78,7 @@
                             </textPath>
                         </text>
                     </svg>
-                    <img src="graphics/profile-picture-placeholder2.jpg" a href="www.linkedin.com/" target="_blank" alt="Profile Picture">
+                    <img src="graphics/profile-picture-placeholder2.jpg" alt="Profile Picture">
                 </div>
             </div>
 
