--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1><a href="beta-build.html">beta build</a></h1>
     <h1><a href="final.html">final</a></h1>
     <h1><a href="final-build.html">final build</a></h1>
+    <h1><a href="case-study">case study</a></h1>
 </body>
 </html>
